feat: changes in vector setup script fot dynamic toml file and better readability of running scripts

--- a/vector_elastic_kibana.toml
+++ b/vector_elastic_kibana.toml
@@ -27,4 +27,4 @@ endpoints = ["http://<Server-Ip>:<Elastic-Port>"]
 mode = "bulk"  
 
 [sinks.elasticsearch_inbound.bulk]
-index = "vector-logs-inbound"  
+index = "connectors-logs"  
